--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
 <!--social links-->
 <div id="Icons">
-  <a href="https://www.linkedin.com/in/sallyyeo/" ><img src="res/linkedin.png" width="45px">
-    <a href="https://t.me/salinize"><img src="res/telegram.png" width="45px">
+  <a href="https://www.linkedin.com/in/sallyyeo/" ><img src="res/linkedin.png" width="45px"></a>
+    <a href="https://t.me/salinize"><img src="res/telegram.png" width="45px"></a>
 </div>
   <!--Past works-->
   <div>
